Update about page

--- a/site.css
+++ b/site.css
@@ -6,8 +6,7 @@ h1{
 
 p {
 
-color: rgb(19, 20, 20);
-font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif
 
 }
 
